<resources>
    <string name="app_name">PetPlanet</string>
    <string name="scan_result">Scan qr code</string>
    <string name="menu_sign_out">Log out</string>
    <string name="txt_notification">Test the notification</string>

    <!--Buttons-->
    <string name="btn_logout">Logout</string>

    <!--Text Views-->
    <string name="tv_planet_name">Xander</string>
    <string name="tv_planet_level">level 3</string>
    <string name="tv_planet_age">3 months old</string>
    <string name="tv_planet_title_health">Health:</string>
    <string name="tv_planet_health">51/100</string>
    <string name="tv_planet_title_members">Members:</string>
    <string name="tv_planet_member1">John Graves</string>
    <string name="tv_example_user_name">Bert P</string>
    <string name="tv_title_profile">Profile</string>

    <!--Image Buttons-->
    <string name="ib_desc_menu_planet">Menu icon of a planet</string>
    <string name="ib_desc_menu_camera">Menu icon of a camera</string>
    <string name="ib_desc_menu_graphic">Menu icon of a graphic chart</string>
    <string name="ib_desc_btn_share">Share button</string>
    <string name="ib_desc_leaderboard">Icon of a trophy</string>

    <!--Image Views-->
    <string name="iv_profile">Profile icon</string>

</resources>
