<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/signout"
        android:text="Logout"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="175dp"
            android:layout_height="175dp"
            app:srcCompat="@drawable/profile"
            android:contentDescription="@string/iv_profile"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/whiteroundrectangle"
        android:layout_marginTop="145dp"
        android:padding="20dp">
        <TextView
            android:id="@+id/tv_title_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_profile"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_profile"
            android:layout_marginTop="6dp"
            android:text="User: Bert p"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />








    </RelativeLayout>

    <!--Menu-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_menu_planet"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/planet"
            android:contentDescription="@string/ib_desc_menu_planet" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_menu_camera"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/qr"
            android:contentDescription="@string/ib_desc_menu_camera" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_menu_graphic"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/grahic"
            android:contentDescription="@string/ib_desc_menu_graphic" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</RelativeLayout>